Particle edit mode crash on macOS + NVIDIA #58489

Closed
opened 2018-12-02 03:06:31 +01:00 by Pascal Nocquet · 31 comments

System Information
Operating system: OSX 10.13.6
Graphics card: NVidia GTX 1080

Blender Version
Broken: 2.80 (2.80 2018-12-02)

Worked: (optional)

Short description of error
Switching to Particle Edit layout after creating a hair particle system crashes the app

Exact steps for others to reproduce the error

  • Attach a simple hair particle system to a mesh
  • switch to Particle Edit
  • crash
**System Information** Operating system: OSX 10.13.6 Graphics card: NVidia GTX 1080 **Blender Version** Broken: 2.80 (2.80 2018-12-02) Worked: (optional) **Short description of error** Switching to Particle Edit layout after creating a hair particle system crashes the app **Exact steps for others to reproduce the error** - Attach a simple hair particle system to a mesh - switch to Particle Edit - crash

#61269 was marked as duplicate of this issue

#61269 was marked as duplicate of this issue

#58651 was marked as duplicate of this issue

#58651 was marked as duplicate of this issue

#58200 was marked as duplicate of this issue

#58200 was marked as duplicate of this issue

#58061 was marked as duplicate of this issue

#58061 was marked as duplicate of this issue

#60313 was marked as duplicate of this issue

#60313 was marked as duplicate of this issue
Author

Added subscriber: @Matelot13

Added subscriber: @Matelot13
Member

Added subscriber: @brita

Added subscriber: @brita
Member

Hello!
I couldn't reproduce with the following steps:

  • Open default blend file.
  • Add a modifier to the cube of type Particle System.
  • On the Particles tab, switch from Emitter to Hair.
  • In the Viewport, switch from Object to Particle Edit Mode.
  • No crash!

Can you confirm that with these steps Blender crashes for you? If so, please try also with the very latest Beta build.

Hello! I couldn't reproduce with the following steps: - Open default blend file. - Add a modifier to the cube of type Particle System. - On the Particles tab, switch from Emitter to Hair. - In the Viewport, switch from Object to Particle Edit Mode. - No crash! Can you confirm that with these steps Blender crashes for you? If so, please try also with the very latest Beta build.

Added subscriber: @Ekiwnox

Added subscriber: @Ekiwnox

I've the same issue on this version :
Version 2.80 Beta
Date : 2019-01-04
Hash : 2c21e3e35f

With Macbook Pro on MacOS High Sierra (Version 10.13.6)
Graphic Cards : NVIDIA GeForce GT 650M 1024 Mo and Intel HD Graphics 4000 1536 Mo

I also tried with default blend file with a cube and a particle system and same issue.
Cannot use comb.

I also have some weird behaviors on the viewport. Hairs particles does not displayed correctly on the viewport (Solid mode not render mode), when Eevee is set as the main render mode. If I switch the render mode to Cycle and I undisplay and display again the particle system it works. This issue appears on the Solid mode and the LookDev mode.

I've the same issue on this version : Version 2.80 Beta Date : 2019-01-04 Hash : 2c21e3e35f30 With Macbook Pro on MacOS High Sierra (Version 10.13.6) Graphic Cards : NVIDIA GeForce GT 650M 1024 Mo and Intel HD Graphics 4000 1536 Mo I also tried with default blend file with a cube and a particle system and same issue. Cannot use comb. I also have some weird behaviors on the viewport. Hairs particles does not displayed correctly on the viewport (Solid mode not render mode), when Eevee is set as the main render mode. If I switch the render mode to Cycle and I undisplay and display again the particle system it works. This issue appears on the Solid mode and the LookDev mode.
Member

@Ekiwnox you confirm that you get a crash from the default file with these exact steps:

  • Open default blend file (cube is selected).
  • On the Particles tab: click 'New' and switch from Emitter to Hair.
  • In the Viewport, switch from Object to Particle Edit Mode. does it crash here?
  • Comb the particles. or here?

I still can not reproduce as of today on Linux, but with 2 similar reports from macOS, it could be something platform dependent.

@Ekiwnox you confirm that you get a crash from the default file with these exact steps: - Open default blend file (cube is selected). - On the Particles tab: click 'New' and switch from Emitter to Hair. - In the Viewport, switch from Object to Particle Edit Mode. *does it crash here?* - Comb the particles. *or here?* I still can not reproduce as of today on Linux, but with 2 similar reports from macOS, it could be something platform dependent.

particle edit.mp4

Yes I confirm I get the crash with all these steps, as you can see on the video bellow.
You can also see how wrong the particles systems is displayed during the first step.
Hope it will help you :-)

[particle edit.mp4](https://archive.blender.org/developer/F6198544/particle_edit.mp4) Yes I confirm I get the crash with all these steps, as you can see on the video bellow. You can also see how wrong the particles systems is displayed during the first step. Hope it will help you :-)

Added subscriber: @Onion

Added subscriber: @Onion

hi,
exactly same story with two releases Dec.3 and todays download from Jan.05.

macOS High Sierra 10.13.4
Nvidia GTX1050Ti 4Gb

hi, exactly same story with two releases Dec.3 and todays download from Jan.05. macOS High Sierra 10.13.4 Nvidia GTX1050Ti 4Gb

Added subscriber: @Le.Citron

Added subscriber: @Le.Citron

Added subscriber: @PremiereBoris

Added subscriber: @PremiereBoris

This is still happening with version 2019-01-08

This is still happening with version 2019-01-08

Added subscribers: @Stober-3, @nachocruje, @lichtwerk

Added subscribers: @Stober-3, @nachocruje, @lichtwerk
Brecht Van Lommel changed title from Going to Particle Edit crashes Blender 2.8 to Particle edit mode crash on macOS + NVIDIA 2019-01-09 17:59:33 +01:00

Added subscriber: @DanielLegnard

Added subscriber: @DanielLegnard

Can also reproduce this bug following the above steps using the latest build (3c3d80ea22). The crash occurs as soon as particle edit mode is selected from the drop-down menu.

Mac OS 10.11.6
NVIDIA GeForce GTX 670 4095 MB

Can also reproduce this bug following the above steps using the latest build (3c3d80ea22af). The crash occurs as soon as particle edit mode is selected from the drop-down menu. Mac OS 10.11.6 NVIDIA GeForce GTX 670 4095 MB

I figured out that you can enter particle edit when the object is not visible in the viewport and then already in p.edit mode turning the visibility on.

I figured out that you can enter particle edit when the object is not visible in the viewport and then already in p.edit mode turning the visibility on.

I'm not sure how you accomplished that, since Blender won't allow me to enter particle edit mode with the object visibility turned off.

However, that just led me to discover that if you set either the "rendered display" or "viewport display" in the particle system settings to "none", you can then enter particle edit mode and edit to your heart's content. If you change the viewport display setting to path while in particle edit mode, Blender crashes (see: https://developer.blender.org/T58233), though that bug seems to be not GPU specific.

I'm not sure how you accomplished that, since Blender won't allow me to enter particle edit mode with the object visibility turned off. However, that just led me to discover that if you set either the "rendered display" or "viewport display" in the particle system settings to "none", you can then enter particle edit mode and edit to your heart's content. If you change the viewport display setting to path while in particle edit mode, Blender crashes (see: https://developer.blender.org/T58233), though that bug seems to be not GPU specific.

Added subscriber: @blenderhighschool

Added subscriber: @blenderhighschool

Added subscribers: @ZedDB, @fclem, @brecht

Added subscribers: @ZedDB, @fclem, @brecht

Added subscriber: @michaos

Added subscriber: @michaos

Blender-crash-report-particle-edit.txt Same issue here on macos.
blender v. 2019-01-16

  1. in obj. mode, add particles > hair
  2. switch to particle edit mode
  3. crash
[Blender-crash-report-particle-edit.txt](https://archive.blender.org/developer/F6339806/Blender-crash-report-particle-edit.txt) Same issue here on macos. blender v. 2019-01-16 1. in obj. mode, add particles > hair 2. switch to particle edit mode 3. crash

Added subscribers: @Jandals, @tkress, @jenkm, @WilliamReynish

Added subscribers: @Jandals, @tkress, @jenkm, @WilliamReynish

Latest beta still crashes in particle edit. 2/20/19
blender-2.80.0-git20190220.ee7c9790a254-x86_64
MacOs Mojave
Nvidia GTX780M

in obj. mode, add particles > hair
switch to particle edit mode
crash

Latest beta still crashes in particle edit. 2/20/19 blender-2.80.0-git20190220.ee7c9790a254-x86_64 MacOs Mojave Nvidia GTX780M in obj. mode, add particles > hair switch to particle edit mode crash

Blender Version
blender-2.80-893fa598319e-OSX-10.9-x86_64
2/25/19

System Information
MacOs Mojave
Nvidia GTX780M

Short description of error
Latest beta still crashes when entering particle edit. EEVEE & Cycles

Exact steps for others to reproduce the error
in obj. mode, cube, add particles > hair
switch to particle edit mode
crash

**Blender Version** blender-2.80-893fa598319e-OSX-10.9-x86_64 2/25/19 **System Information** MacOs Mojave Nvidia GTX780M **Short description of error** Latest beta still crashes when entering particle edit. EEVEE & Cycles **Exact steps for others to reproduce the error** in obj. mode, cube, add particles > hair switch to particle edit mode crash

This issue was referenced by 680c7209ec

This issue was referenced by 680c7209ecf7315a9818923daf62ae9b1cd4c26b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58489
No description provided.